--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.mouseWheelZoom": true,
-    "window.zoomLevel": 0
+    "window.zoomLevel": 0,
+    "editor.fontFamily": "'Jet Brains Mono', 'Source Code Pro', 'Droid Sans Mono', 'monospace', monospace"
 }
