--- a/config/tsconfig.lib.json
+++ b/config/tsconfig.lib.json
@@ -16,7 +16,7 @@
         "jest"
       ],
       "rootDir": "../src",
-      "outDir":  "../lib/browser"
+      "outDir":  "../lib"
     },
     "include": [
       "../src/*",
