--- a/config/tsconfig.node.json
+++ b/config/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "es6",
+      "target": "ES6",
       "module": "commonjs",
       "moduleResolution": "node",
       "esModuleInterop": true,
@@ -20,6 +20,7 @@
     },
     "include": [
       "../src/*",
-      "../src/**/*"
+      "../src/**/*",
+      "../node_modules"
     ]
   }
