--- a/config/tsconfig.cjs.json
+++ b/config/tsconfig.cjs.json
@@ -7,7 +7,9 @@
       "noResolve": false,
       "noImplicitAny": false,
       "sourceMap": true,
+      "declaration": true,
       "preserveConstEnums":true,
+      "allowSyntheticDefaultImports": false,
       "lib": [
           "es6"
       ],
@@ -15,13 +17,13 @@
         "jest",
         "node"
       ],
-      "rootDir": "..",
-      "outDir":  "../bin"
+      "rootDir": "../src",
+      "outDir":  "../lib/cjs"
     },
     "include": [
       "../src/*",
       "../src/**/*",
-      "../node_modules/wrapt.co_re/**/*",
-      "../node_modules/meta.gl/**/*",
+      // "../node_modules/wrapt.co_re/**/*",
+      // "../node_modules/meta.gl/**/*",
     ]
   }
