--- a/config/tsconfig.esm.json
+++ b/config/tsconfig.esm.json
@@ -5,6 +5,7 @@
       "moduleResolution": "node",
       "noResolve": false,
       "noImplicitAny": false,
+      "declaration": true,
       "sourceMap": true,
       "preserveConstEnums":true,
       "lib": [
@@ -16,7 +17,7 @@
         "jest"
       ],
       "rootDir": "../src",
-      "outDir":  "../lib"
+      "outDir":  "../lib/esm"
     },
     "include": [
       "../src/*",
