--- a/config/tsconfig.esm.json
+++ b/config/tsconfig.esm.json
@@ -16,11 +16,13 @@
         "node",
         "jest"
       ],
-      "rootDir": "../src",
+      "rootDir": "..",
       "outDir":  "../lib/esm"
     },
     "include": [
       "../src/*",
-      "../src/**/*"
+      "../src/**/*",
+      "../node_modules/wrapt.co_re/lib/**/*",
+      "../node_modules/meta.gl/lib/**/*",
     ]
   }
