--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "wrapt.org",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Multi-paradigm, multi-dimensional programming language with AOT compilation to JS",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
   "scripts": {
     "test": "jest",
-    "start": "node ./bin/10_0_SYSTEM/4_shell/index.js",
+    "start": "node ./lib/cjs/10_0_SYSTEM/4_shell/index.js",
     "build": "tsc -p config/tsconfig.esm.json && tsc -p config/tsconfig.cjs.json",
     "prepublish": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ultr7l/wrapt.org.git"
   },
   "keywords": [],
   "author": "Jeremy Evans <openspacehexagon@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "esm": "^3.2.25",
-    "meta.gl": "^0.0.2",
-    "wrapt.co_re": "^1.1.0"
+    "meta.gl": "^0.0.9",
+    "wrapt.co_re": "^1.1.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
