--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "wrapt.org",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Multi-paradigm, multi-dimensional programming language with AOT compilation to JS",
-  "main": "./lib/cjs/index.js",
-  "module": "./lib/esm/index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "start": "node ./lib/cjs/10_0_SYSTEM/4_shell/index.js",
@@ -19,8 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "esm": "^3.2.25",
-    "meta.gl": "^0.0.11",
-    "wrapt.co_re": "^1.1.3"
+    "meta.gl": "^0.0.12",
+    "wrapt.co_re": "^1.1.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
@@ -28,6 +27,7 @@
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   },
+  "exports": "./lib/esm/index.js",
   "jest": {
     "moduleFileExtensions": [
       "ts",
