--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "workbench.colorTheme": "Freshcut (rainglow)",
     "editor.lineHeight": 0.9,
     "editor.letterSpacing": 1,
-    "editor.fontWeight": "100"
+    "editor.fontWeight": "100",
+    "editor.fontSize": 12
 }
