--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "editor.mouseWheelZoom": true,
     "window.zoomLevel": 0,
     "editor.fontFamily": "'Jetbrains Mono', 'Source Code Pro', 'Droid Sans Mono', 'monospace', monospace",
-    "workbench.colorTheme": "Default Light+",
+    "workbench.colorTheme": "Kimbie Dark",
     "editor.lineHeight": 0.9,
     "editor.letterSpacing": 1,
     "editor.fontWeight": "100",
