--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
+    // 
+    "files.associations": {
+        "*.wrapt.org": "java",
+    },
+    
+    //
     "editor.mouseWheelZoom": true,
     "window.zoomLevel": 1,
     "editor.fontFamily": "'Jetbrains Mono', 'Source Code Pro', 'Droid Sans Mono', 'monospace', monospace",
@@ -8,5 +14,5 @@
     "editor.fontWeight": "100",
     "editor.fontSize": 12,
     "workbench.preferredDarkColorTheme": "Default Light+",
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
 }
