switch to ESModule

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,10 @@
     "editor.mouseWheelZoom": true,
     "window.zoomLevel": 1,
     "editor.fontFamily": "'Jetbrains Mono', 'Source Code Pro', 'Droid Sans Mono', 'monospace', monospace",
-    "workbench.colorTheme": "Sourlick (rainglow)",
+    "workbench.colorTheme": "Default Light+",
     "editor.lineHeight": 0.9,
     "editor.letterSpacing": 1,
-    "editor.fontWeight": "100",
+    "editor.fontWeight": "300",
     "editor.fontSize": 12,
     "workbench.preferredDarkColorTheme": "Default Light+",
     "editor.minimap.enabled": false,
