--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,25 @@
 {
     "compilerOptions": {
-      "target": "es5",
-      "module": "commonjs",
+      "target": "ESNext",
+      "module": "ESNext",
+
       "moduleResolution": "node",
+      
       "esModuleInterop": true,
+      
       "noResolve": false,
       "noImplicitAny": false,
       "sourceMap": true,
       "declaration": true,
+      
       "preserveConstEnums":true,
       "allowSyntheticDefaultImports": false,
-      "lib": [
-          "es6"
-      ],
+      
       "types": [
         "jest",
         "node"
       ],
-      "rootDir": "..",
-      "outDir":  "../lib"
+      "rootDir": "./src",
+      "outDir":  "./dist"
     }
   }
