--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,9 @@
     
     //
     "editor.mouseWheelZoom": true,
-    "window.zoomLevel": 1,
+    "window.zoomLevel": 0,
     "editor.fontFamily": "'Jetbrains Mono', 'Source Code Pro', 'Droid Sans Mono', 'monospace', monospace",
-    "workbench.colorTheme": "Default Light+",
+    "workbench.colorTheme": "Freshcut (rainglow)",
     "editor.lineHeight": 0.9,
     "editor.letterSpacing": 1,
     "editor.fontWeight": "300",
