WIP concept projection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
     "editor.mouseWheelZoom": true,
     "window.zoomLevel": -1,
     "editor.fontFamily": "'Jetbrains Mono', 'Source Code Pro', 'Droid Sans Mono', 'monospace', monospace",
-    "workbench.colorTheme": "Night Owl (No Italics)",
+    "workbench.colorTheme": "Sourlick (rainglow)",
     "editor.lineHeight": 0.9,
     "editor.letterSpacing": 1,
     "editor.fontWeight": "300",
