--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,14 @@
     // 
     "files.associations": {
         "*.wrapt.org": "java",
+        "*.wr":        "java"
     },
     
     //
     "editor.mouseWheelZoom": true,
     "window.zoomLevel": 1,
     "editor.fontFamily": "'Jetbrains Mono', 'Source Code Pro', 'Droid Sans Mono', 'monospace', monospace",
-    "workbench.colorTheme": "Sourlick (rainglow)",
+    "workbench.colorTheme": "Freshcut (rainglow)",
     "editor.lineHeight": 0.9,
     "editor.letterSpacing": 1,
     "editor.fontWeight": "300",
