--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
     "editor.mouseWheelZoom": true,
     "window.zoomLevel": 1,
     "editor.fontFamily": "'Jetbrains Mono', 'Source Code Pro', 'Droid Sans Mono', 'monospace', monospace",
-    "workbench.colorTheme": "Freshcut (rainglow)",
+    "workbench.colorTheme": "Storm (rainglow)",
     "editor.lineHeight": 0.9,
     "editor.letterSpacing": 1,
     "editor.fontWeight": "300",
