--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,35 @@
     
     //
     "editor.mouseWheelZoom": true,
-    "window.zoomLevel": 2,
+    "window.zoomLevel": 3,
     "editor.fontFamily": "'Jetbrains Mono', 'Source Code Pro', 'Droid Sans Mono', 'monospace', monospace",
-    "workbench.colorTheme": "Freshcut (rainglow)",
+    "workbench.colorTheme": "Banner Contrast (rainglow)",
     "editor.lineHeight": 0.9,
     "editor.letterSpacing": 1,
     "editor.fontWeight": "200",
-    "editor.fontSize": 12,
+    "editor.fontSize": 13,
     "workbench.preferredDarkColorTheme": "Default Light+",
     "editor.minimap.enabled": true,
+    "workbench.colorCustomizations": {
+        "terminal.background": "#151515",
+        "terminal.foreground": "#D0D0D0",
+        "terminalCursor.background": "#D0D0D0",
+        "terminalCursor.foreground": "#D0D0D0",
+        "terminal.ansiBlack": "#151515",
+        "terminal.ansiBlue": "#6FC2EF",
+        "terminal.ansiBrightBlack": "#505050",
+        "terminal.ansiBrightBlue": "#6FC2EF",
+        "terminal.ansiBrightCyan": "#12CFC0",
+        "terminal.ansiBrightGreen": "#ACC267",
+        "terminal.ansiBrightMagenta": "#E1A3EE",
+        "terminal.ansiBrightRed": "#FB9FB1",
+        "terminal.ansiBrightWhite": "#F5F5F5",
+        "terminal.ansiBrightYellow": "#DDB26F",
+        "terminal.ansiCyan": "#12CFC0",
+        "terminal.ansiGreen": "#ACC267",
+        "terminal.ansiMagenta": "#E1A3EE",
+        "terminal.ansiRed": "#FB9FB1",
+        "terminal.ansiWhite": "#D0D0D0",
+        "terminal.ansiYellow": "#DDB26F"
+    },
 }
